<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginSignupRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginSignupActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/loginSignupLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginSignupTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="50sp" />

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/loginButtonExpandableLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:el_duration="1000"
                app:el_expanded="true"
                app:el_parallax="0.5">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/Log_In" />

            </net.cachapa.expandablelayout.ExpandableLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/loginExpandableLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:el_duration="1000"
                app:el_expanded="false"
                app:el_parallax="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Log_In"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/usernameEditTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/passwordEditTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/loginGoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="120dp"
                    android:text="@string/Log_In"
                    app:icon="@drawable/ic_baseline_arrow_forward_24"
                    app:iconGravity="textEnd"
                    app:iconPadding="8dp" />
            </net.cachapa.expandablelayout.ExpandableLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/signupButtonExpandableLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:el_duration="1000"
                app:el_expanded="true"
                app:el_parallax="0.5">

                <Button
                    android:id="@+id/signupButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/Sign_Up" />

            </net.cachapa.expandablelayout.ExpandableLayout>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/signupExpandableLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:el_duration="1000"
                app:el_expanded="false"
                app:el_parallax="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Sign_Up"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/usernameEditTextSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/passwordEditTextSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/signupGoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="120dp"
                    android:text="@string/Sign_Up"
                    app:icon="@drawable/ic_baseline_arrow_forward_24"
                    app:iconGravity="textEnd"
                    app:iconPadding="8dp" />

            </net.cachapa.expandablelayout.ExpandableLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>