...
    <string name="google_maps_api_key">AIzaSyAdqtjnD8q6tp23pD0DJTXhVu6Ba_1yyJQ</string>

    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <string name="Log_In">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="verifying_credentials">Verifying credentials...</string>
    <string name="login_failed">Login failed, please try again</string>
    <string name="signup_failed">Signup failed, please try again</string>
    <string name="signup_failed_invalid_username">Signup failed. Your username can not contain special characters.</string>
    <string name="signup_failed_invalid_password">Signup failed. Your password must contain at least 7 characters.</string>
    <string name="title_activity_main">MainActivity</string>
...
    <string name="app_back_online">Back online. Pull down to refresh the feed.</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="privateTab">Private</string>
    <string name="sharedTab">Shared</string>
    <string name="publicTab">Public</string>
    <string name="createEntry">Create Entry</string>
    <string name="Title">Title</string>
    <string name="entry_text_hint">Write whatever you want!</string>
    <string name="add_media">Add media</string>
    <string name="post">Post</string>
    <string name="entry_type_desc">Do you want your entry to be public, shared, or public? (You can change this later.)</string>
    <string name="privateButton">Private (only you can see and edit this entry)</string>
    <string name="sharedButton">Shared (only people you choose can see and edit this entry)</string>
    <string name="publicButton">Public (everyone can see this entry, still only you can edit this entry)</string>
    <string name="title_is_empty">You need to give your entry a title!</string>
    <string name="text_is_empty">You need to give your entry some text!</string>
    <string name="entry_type_is_empty">You need to indicate if your entry should be private, public, or shared!</string>
    <string name="title_activity_entry_details">Entry Details</string>
...
    <string name="you_will_receive_notifications">You will now receive notifications.</string>
    <string name="you_will_not_receive_notifications">You will no longer receive notifications.</string>
    <string name="we_need_location_permissions_for_mapview">We need permission to access your location in order to use Map View.</string>
    <string name="location_permissions_granted">Location permissions granted.</string>
    <string name="location_permissions_denied">Location permissions denied.</string>
    <string name="search_hint">Search entries...</string>=
    <string name="edit_entry">Edit entry</string>
    <string name="edit_an_entry">Edit an Entry</string>
    <string name="add_contributors_here">Type the usernames of whoever you want to add to the entry!</string>
    <string name="add_location_to_entry">Add location to entry?</string>
    <string name="no_camera">You have no camera app that InteractiveDiary can use to take a photo or video.</string>
    <string name="no_gallery">You have no gallery app that InteractiveDiary can use to upload a photo or video.</string>
    <string name="error_camera_media">Something went wrong capturing the media, please try again.</string>
...
