<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/entryImageImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/entryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/entryImageImageView"
        android:textSize="20sp"
        tools:text="Day at the beach" />

    <TextView
        android:id="@+id/entryAuthorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entryTitle"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/entryImageImageView"
        tools:text="by Meghan" />

    <TextView
        android:id="@+id/entryTimestampTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entryAuthorTextView"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/entryImageImageView"
        tools:text="Wed Aug 24 2042" />

    <TextView
        android:id="@+id/entryTextTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entryTimestampTextView"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/entryImageImageView"
        android:ellipsize="end"
        android:maxLines="4"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum" />
</RelativeLayout>